<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_back"
        android:background="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/titleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Settings"
        android:gravity="center"
        android:textSize="18sp"
        android:fontFamily="@font/raleway_semibold"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/titleName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_settings"
            android:textSize="18sp"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            android:fontFamily="@font/raleway_medium"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/textColor"
            android:layout_marginBottom="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/settings_background"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:paddingEnd="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enable Notifications"
                android:gravity="center"
                android:fontFamily="@font/raleway_medium"
                android:textSize="16sp"
                android:layout_marginStart="5dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchNotifications"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checked="true"
                android:layout_weight="1"
                app:thumbTint="@color/textColor"
                app:trackTint="#4D5F7A"/>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>