...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/profileHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/dmsans_medium"
            android:text="Profile"
            android:textColor="@color/white"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/toolbar">

        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@null"
            android:src="@drawable/ic_settings"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
...

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/toolbar_person"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true">

...
